<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codeclan.example.rockpaperscissors.ResultActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_heading"/>
    <TextView
        android:id="@+id/game_Rslt_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/player_choice_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_choice"
        />
    <TextView
        android:id="@+id/computer_choice_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/computer_choice"/>
</LinearLayout>
